--- a/src/main/resources/static/AngularJS_09.html
+++ b/src/main/resources/static/AngularJS_09.html
@@ -6,13 +6,14 @@
     <title>Title</title>
 </head>
 <body>
-<div ng-app="MyApp" ng-controller="JugadorCtrl">
-    <ul>
-        <li ng-repeat=" x in myData">
-            {{ x.nombreJugador + ', ' + x.posicion}}
-        </li>
-    </ul>
-</div>
+    <div ng-app="MyApp" ng-controller="JugadorCtrl">
+        <table>
+            <tr ng-repeat="x in myData">
+                <td>{{x.nombreJugador}}</td>
+                <td>{{x.posicion}}</td>
+            </tr>
+        </table>
+    </div>
 <script>
     var app = angular.module("MyApp", []);
     app.controller('JugadorCtrl', function ($scope, $http) {
@@ -24,4 +25,5 @@
 </body>
 </html>
 
-<!-- localhost:8080/AngularJS_07.html -->
+
+<!-- localhost:8080/AngularJS_09.html -->
