--- a/src/main/resources/static/AngularJS_13.html
+++ b/src/main/resources/static/AngularJS_13.html
@@ -15,13 +15,17 @@
 </head>
 <body>
 <div ng-app="MyApp" ng-controller="JugadorCtrl">
+
+    <p>Introduzca el nombre a buscar : </p>
+    <p><input type="text" ng-model="test"</p>
+
     <table>
         <tr>
             <td style="background-color: burlywood">{{"Jugador"}}</td>
             <td style="background-color: burlywood">{{"Posicion"}}</td>
             <td style="background-color: burlywood">{{"Canastas"}}</td>
         </tr>
-        <tr ng-repeat="x in myData" ng-show="x.numCanastas > 32">
+        <tr ng-repeat="x in myData | filter:test" >
             <td ng-if="$odd" style="background-color: #ffec34">
                 {{x.nombreJugador}}</td>
             <td ng-if="$even">
@@ -49,4 +53,4 @@
 </html>
 
 
-<!-- localhost:8080/AngularJS_12.html -->
+<!-- localhost:8080/AngularJS_13.html -->
